--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npx vite preview --host"
+    "start": "vite preview --host",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -30,6 +31,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.11"
   }
 }
