--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "@vercel/blob": "^0.15.1",
+    "bcrypt": "^5.1.1",
     "color": "^4.2.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
+    "prisma": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1"
