--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@vercel/blob": "^0.15.1",
     "bcrypt": "^5.1.1",
     "color": "^4.2.3",
-    "jsonwebtoken": "^9.0.2",
-    "next": "13.4.19",
+    "jose": "^5.9.6",
+    "next": "14.2.15",
     "prisma": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
