--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prisma": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "20.5.9",
