--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^6.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@vercel/blob": "^0.15.1",
     "bcrypt": "^5.1.1",
     "color": "^4.2.3",
